--- a/jvb.html
+++ b/jvb.html
@@ -35,7 +35,7 @@
             <a href="jvg.html" class="nav-link">JV Girls</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Gallery</a>
+            <a href="gallery.html" class="nav-link">Gallery</a>
           </li>
     </nav>
   
