--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav id='nav' class="fixed-top navbar navbar-expand-md navbar-dark">
-      <a href="#" class="navbar-brand">
+      <a href="index.html" class="navbar-brand">
         <h3 class="mb-0">CAVC Scores</h3>
       </a>
       <button class="navbar-toggler" data-toggle='collapse' data-target='#mainNavbar'>
@@ -22,19 +22,20 @@
       <div class="collapse navbar-collapse" id="mainNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a href="index.html#varsity" class="nav-link">Varsity</a>
+            <a href="varsityb.html" class="nav-link">Varsity Boys</a>
           </li>
           <li class="nav-item">
-            <a href="index.html#jv" class="nav-link">JV</a>
+            <a href="varsityg.html" class="nav-link">Varsity Girls</a>
           </li>
           <li class="nav-item">
-            <a href="index.html#middle" class="nav-link">Middle School</a>
+            <a href="jvb.html" class="nav-link">JV Boys</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Gallery</a>
+            <a href="jvg.html" class="nav-link">JV Girls</a>
           </li>
-        
-    
+          <li class="nav-item">
+            <a href="gallery.html" class="nav-link">Gallery</a>
+          </li>
     </nav>
 
     <h1 class="heading text-center mt-5">No Photos Yet!!!</h1>
