--- a/jvg.html
+++ b/jvg.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav id='nav' class="fixed-top navbar navbar-expand-md navbar-dark">
-      <a href="index.html" class="navbar-brand">
+      <a href="./" class="navbar-brand">
         <h3 class="mb-0">CAVC Scores</h3>
       </a>
       <button class="navbar-toggler" data-toggle='collapse' data-target='#mainNavbar'>
