--- a/jvb.html
+++ b/jvb.html
@@ -40,7 +40,7 @@
 
     <section id="cards" class="my-5">
       <div class="container">
-        <h1 id='varsity' class="display-4 text-center heading">Varsity Girls</h1>
+        <h1 id='varsity' class="display-4 text-center heading">JV Boys</h1>
 
         <!-- Day element -->
         <h1 class="heading text-center mb-3">Thursday</h1>
