--- a/varsityb.html
+++ b/varsityb.html
@@ -127,7 +127,7 @@
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 num">1</h4>
+                  <h4 class="mb-0 winner num">2</h4>
                   <h4 class="mb-0 num">:</span>
                   <h4 class="mb-0 num">1</h4>
                 </div>
@@ -157,9 +157,9 @@
                 <div class="scores">
                   <p class="mb-0 up">third set</p>
                   <div class="mb-0 d-flex justify-content-around">
-                    <h4 class="mb-0 num"></h4>
+                    <h4 class="mb-0 num">15</h4>
                     <h4 class="mb-0 num">:</span>
-                    <h4 class="mb-0 winner num"></h4>
+                    <h4 class="mb-0 num">5</h4>
                   </div>
                 </div>
               </div>
