--- a/jvb.html
+++ b/jvb.html
@@ -128,7 +128,7 @@
                 <div class="mb-0 d-flex justify-content-around">
                   <h4 class="mb-0 num">1</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num">1</h4>
+                  <h4 class="mb-0 winner num">2</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -156,19 +156,19 @@
                 <div class="scores">
                   <p class="mb-0 up">third set</p>
                   <div class="mb-0 d-flex justify-content-around">
-                    <h4 class="mb-0 num"></h4>
+                    <h4 class="mb-0 num">2</h4>
                     <h4 class="mb-0 num">:</span>
-                    <h4 class="mb-0 winner num"></h4>
+                    <h4 class="mb-0 winner num">15</h4>
                   </div>
                 </div>
               </div>
               <hr class='m-1'>
-              <div class="card-footer d-none text-white">
+              <div class="card-footer text-white">
                 <div class=''>
                   <h5 class="mb-0">winner:</h5>
                   <h2 class="mb-0 team">TIS (W)</h3>
                 </div> 
-                <div class="placeholder team">
+                <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
                 </div>
               </div>
