--- a/jvg.html
+++ b/jvg.html
@@ -257,9 +257,9 @@
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 num">0</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 winner num">1</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -269,9 +269,9 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 num">2</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 winner num">15</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
