--- a/varsityg.html
+++ b/varsityg.html
@@ -265,7 +265,7 @@
               </div>
                
               <a href='#details16' class="team " data-toggle="collapse">see details</a>
-              <div class="collapse d-none" id='details16'>
+              <div class="collapse " id='details16'>
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
