--- a/jvb.html
+++ b/jvb.html
@@ -322,9 +322,9 @@
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 winner num">2</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 num">0</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -334,18 +334,18 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">15</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">13</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">second set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">15</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">5</h4>
                     </div>
                   <hr class='m-1'>
                 </div>
