--- a/jvg.html
+++ b/jvg.html
@@ -721,9 +721,9 @@
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 num">0</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 winner num">2</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -733,18 +733,18 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 num">14</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">second set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 num">9</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                     </div>
                   <hr class='m-1'>
                 </div>
@@ -759,11 +759,11 @@
               </div>
               <hr class='m-1'>
               <div class="card-footer  text-white">
-                <div class=' d-none'>
+                <div class=' '>
                   <h5 class="mb-0">winner:</h5>
-                  <h2 class="mb-0 team">TIS (B)</h3>
+                  <h2 class="mb-0 team">DAIS</h3>
                 </div>
-                <div class="placeholder team">
+                <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
                 </div>
               </div>
@@ -786,9 +786,9 @@
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 winner num">2</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 num">1</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -798,37 +798,37 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">22</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">second set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 num">15</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                     </div>
                   <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">third set</p>
                   <div class="mb-0 d-flex justify-content-around">
-                    <h4 class="mb-0 num"></h4>
+                    <h4 class="mb-0 winner num">15</h4>
                     <h4 class="mb-0 num">:</span>
-                    <h4 class="mb-0 winner num"></h4>
+                    <h4 class="mb-0 num">10</h4>
                   </div>
                 </div>
               </div>
               <hr class='m-1'>
               <div class="card-footer  text-white">
-                <div class=' d-none'>
+                <div class=' '>
                   <h5 class="mb-0">winner:</h5>
-                  <h2 class="mb-0 team">TIS (B)</h3>
+                  <h2 class="mb-0 team">AIS</h3>
                 </div>
-                <div class="placeholder team">
+                <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
                 </div>
               </div>
