--- a/jvb.html
+++ b/jvb.html
@@ -824,7 +824,7 @@
               </div>
               <hr class='m-1'>
               <div class="card-footer  text-white">
-                <div class=' d-none'>
+                <div class=' '>
                   <h5 class="mb-0">winner:</h5>
                   <h2 class="mb-0 team">AIS</h3>
                 </div>
