--- a/varsityb.html
+++ b/varsityb.html
@@ -850,16 +850,16 @@
                 <h5 class='date mb-0'>old gym</h5>
               </div>
               <div id='teams' class=" w-100 d-flex text-white justify-content-around align-items-center">
-                <h4 class="mb-0 team">VB 1</h4>
+                <h4 class="mb-0 team">AIS</h4>
                 <span class="vs pr-4">vs.</span>
-                <h4 class="mb-0 team">VB 4</h4>
+                <h4 class="mb-0 team">TIS (W)</h4>
               </div>
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 winner num">2</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 num">0</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -869,18 +869,18 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">15</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">second set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">15</h4>
                     </div>
                   <hr class='m-1'>
                 </div>
@@ -895,11 +895,11 @@
               </div>
               <hr class='m-1'>
               <div class="card-footer  text-white">
-                <div class=' d-none'>
+                <div class=' '>
                   <h5 class="mb-0">winner:</h5>
-                  <h2 class="mb-0 team">TIS (B)</h3>
+                  <h2 class="mb-0 team">AIS</h3>
                 </div>
-                <div class="placeholder team">
+                <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
                 </div>
               </div>
@@ -918,16 +918,16 @@
                 <h5 class='date mb-0'>new gym</h5>
               </div>
               <div id='teams' class=" w-100 d-flex text-white justify-content-around align-items-center">
-                <h4 class="mb-0 team">VB 2</h4>
+                <h4 class="mb-0 team">TIS (B)</h4>
                 <span class="vs pr-4">vs.</span>
-                <h4 class="mb-0 team">VB 3</h4>
+                <h4 class="mb-0 team">School 61</h4>
               </div>
               <div class="scores ">
                 <p class="mb-0 up">total</p>
                 <div class="mb-0 d-flex justify-content-around">
-                  <h4 class="mb-0 winner num"></h4>
+                  <h4 class="mb-0 winner num">2</h4>
                   <h4 class="mb-0 num">:</span>
-                  <h4 class="mb-0 num"></h4>
+                  <h4 class="mb-0 num">1</h4>
                 </div>
                 <hr class='m-1'>
               </div>
@@ -937,37 +937,37 @@
                 <div class="scores">
                   <p class="mb-0 up">first set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 num">23</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                     </div>
                     <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">second set</p>
                     <div class="mb-0 d-flex justify-content-around">
-                      <h4 class="mb-0 winner num"></h4>
+                      <h4 class="mb-0 winner num">25</h4>
                       <h4 class="mb-0 num">:</span>
-                      <h4 class="mb-0 num"></h4>
+                      <h4 class="mb-0 num">11</h4>
                     </div>
                   <hr class='m-1'>
                 </div>
                 <div class="scores">
                   <p class="mb-0 up">third set</p>
                   <div class="mb-0 d-flex justify-content-around">
-                    <h4 class="mb-0 num"></h4>
+                    <h4 class="mb-0 winner num">15</h4>
                     <h4 class="mb-0 num">:</span>
-                    <h4 class="mb-0 winner num"></h4>
+                    <h4 class="mb-0 num">7</h4>
                   </div>
                 </div>
               </div>
               <hr class='m-1'>
               <div class="card-footer  text-white">
-                <div class=' d-none'>
+                <div class=' '>
                   <h5 class="mb-0">winner:</h5>
                   <h2 class="mb-0 team">TIS (B)</h3>
                 </div>
-                <div class="placeholder team">
+                <div class="placeholder d-none team">
                   <h4>scores upcoming!!!</h4>
                 </div>
               </div>
