--- a/varsityb.html
+++ b/varsityb.html
@@ -985,9 +985,9 @@
                 <h5 class='date mb-0'>new gym</h5>
               </div>
               <div id='teams' class=" w-100 d-flex text-white justify-content-around align-items-center">
-                <h4 class="mb-0 team">L #55</h4>
+                <h4 class="mb-0 team">TIS</h4>
                 <span class="vs ">vs.</span>
-                <h4 class="mb-0 team">L #56</h4>
+                <h4 class="mb-0 team">AIS</h4>
               </div>
               <div class="scores ">
                 <p class="mb-0 up">total</p>
