--- a/jvg.html
+++ b/jvg.html
@@ -988,9 +988,9 @@
                 <h5 class='date mb-0'>outside 1</h5>
               </div>
               <div id='teams' class=" w-100 d-flex text-white justify-content-around align-items-center">
-                <h4 class="mb-0 team">L #49</h4>
+                <h4 class="mb-0 team">AST</h4>
                 <span class="vs ">vs.</span>
-                <h4 class="mb-0 team">L #50</h4>
+                <h4 class="mb-0 team">AIS</h4>
               </div>
               <div class="scores ">
                 <p class="mb-0 up">total</p>
@@ -1054,9 +1054,9 @@
                 <h5 class='date mb-0'>old gym</h5>
               </div>
               <div id='teams' class=" w-100 d-flex text-white justify-content-around align-items-center">
-                <h4 class="mb-0 team">W #49</h4>
+                <h4 class="mb-0 team">DAIS</h4>
                 <span class="vs ">vs.</span>
-                <h4 class="mb-0 team">W #50</h4>
+                <h4 class="mb-0 team">TIS</h4>
               </div>
               <div class="scores ">
                 <p class="mb-0 up">total</p>
