--- a/varsityg.html
+++ b/varsityg.html
@@ -1112,6 +1112,122 @@
           <!-- Card Element Ends --> 
            
             </div>
+        
+        <h1 class="heading text-center mb-3">Final Results</h1>
+
+      <!-- Place Element Starts -->
+          <div class=' col-md-6 game1'>
+            <div class="card text-center text-uppercase mb-5">
+              <div id='top' class=" card-header text-white">
+                <h3 class='category mb-0'>1st Place</h3>
+              </div>
+              <div class="card-footer  text-white">
+                <div >
+                  <h2 class="mb-0 team"></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Place Element Ends --> 
+            <!-- Place Element Starts -->
+          <div class=' col-md-6 game1'>
+            <div class="card text-center text-uppercase mb-5">
+              <div id='top' class=" card-header text-white">
+                <h3 class='category mb-0'>2nd Place</h3>
+              </div>
+              <div class="card-footer  text-white">
+                <div >
+                  <h2 class="mb-0 team"></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Place Element Ends --> 
+            <!-- Place Element Starts -->
+          <div class=' col-md-6 game1'>
+            <div class="card text-center text-uppercase mb-5">
+              <div id='top' class=" card-header text-white">
+                <h3 class='category mb-0'>3rd Place</h3>
+              </div>
+              <div class="card-footer  text-white">
+                <div >
+                  <h2 class="mb-0 team"></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Place Element Ends --> 
+            <!-- Place Element Starts -->
+          <div class=' col-md-6 game1'>
+            <div class="card text-center text-uppercase mb-5">
+              <div id='top' class=" card-header text-white">
+                <h3 class='category mb-0'>4th Place</h3>
+              </div>
+              <div class="card-footer  text-white">
+                <div >
+                  <h2 class="mb-0 team"></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Place Element Ends --> 
+   
+      <!-- Place Element Starts -->
+          <div class=' col-md-6 game1'>
+            <div class="card text-center text-uppercase mb-5">
+              <div id='top' class=" card-header text-white">
+                <h3 class='category mb-0'>1st Place</h3>
+              </div>
+              <div class="card-footer  text-white">
+                <div >
+                  <h2 class="mb-0 team"></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Place Element Ends --> 
+            <!-- Place Element Starts -->
+          <div class=' col-md-6 game1'>
+            <div class="card text-center text-uppercase mb-5">
+              <div id='top' class=" card-header text-white">
+                <h3 class='category mb-0'>2nd Place</h3>
+              </div>
+              <div class="card-footer  text-white">
+                <div >
+                  <h2 class="mb-0 team"></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Place Element Ends --> 
+            <!-- Place Element Starts -->
+          <div class=' col-md-6 game1'>
+            <div class="card text-center text-uppercase mb-5">
+              <div id='top' class=" card-header text-white">
+                <h3 class='category mb-0'>3rd Place</h3>
+              </div>
+              <div class="card-footer  text-white">
+                <div >
+                  <h2 class="mb-0 team"></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Place Element Ends --> 
+            <!-- Place Element Starts -->
+          <div class=' col-md-6 game1'>
+            <div class="card text-center text-uppercase mb-5">
+              <div id='top' class=" card-header text-white">
+                <h3 class='category mb-0'>4th Place</h3>
+              </div>
+              <div class="card-footer  text-white">
+                <div >
+                  <h2 class="mb-0 team"></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Place Element Ends -->   
 
           <!-- day element end -->
           </div>
