--- a/varsityg.html
+++ b/varsityg.html
@@ -1112,7 +1112,7 @@
           <!-- Card Element Ends --> 
            
             </div>
-        
+        <div class="d-flex flex-row align-items-center">
         <h1 class="heading text-center mb-3">Final Results</h1>
 
       <!-- Place Element Starts -->
@@ -1228,7 +1228,7 @@
             </div>
           </div>
           <!-- Place Element Ends -->   
-
+      </div>
           <!-- day element end -->
           </div>
    
