--- a/varsityg.html
+++ b/varsityg.html
@@ -1152,7 +1152,7 @@
                     </div>
                     <div class="card-footer  text-white">
                       <div >
-                        <h2 class="mb-0 team"></h3>
+                        <h2 class="mb-0 team">TIS</h3>
                       </div>
                     </div>
                   </div>
@@ -1166,7 +1166,7 @@
                     </div>
                     <div class="card-footer  text-white">
                       <div >
-                        <h2 class="mb-0 team"></h3>
+                        <h2 class="mb-0 team">AIS</h3>
                       </div>
                     </div>
                   </div>
